Change notebook description and read the datasets

--- a/notebook/P59_Shape_Classification_ML_D2.ipynb
+++ b/notebook/P59_Shape_Classification_ML_D2.ipynb
@@ -6,14 +6,21 @@
     "id": "hGg1vOAhXHOn"
    },
    "source": [
-    "# Course Project\n",
+    "# Project 59 Shape Classification\n",
     "\n",
-    "## Authors: Roberto Santana\n",
+    "## Authors: Julen Etxaniz and Ibon Urbina\n",
     "\n",
-    "## Objectives: \n",
+    "## Objectives: The goal of the project is to compare different classification algorithms on the solution of one or more shape datasets. \n",
     "\n",
     "## What is done in the Notebook: \n",
-    "\n"
+    "### Importing the libraries\n",
+    "### Reading the datasets\n",
+    "### Processing the dataset\n",
+    "### Preparing data for classification\n",
+    "### Dividing dataset in train and test sets for validation\n",
+    "### Defining the classifiers\n",
+    "### Learning the classifiers\n",
+    "### Using the classifier for predictions"
    ]
   },
   {
@@ -23,23 +30,20 @@
    },
    "source": [
     "# Importing the libraries\n",
-    " We start by importing all relevant libraries to be used in the notebook. We only use pandas and sklearn.\n",
+    " We start by importing all relevant libraries to be used in the notebook.\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "Yyc03UBFXHOp"
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import accuracy_score"
+    "import os\n",
+    "from scipy.io import loadmat"
    ]
   },
   {
@@ -48,61 +52,35 @@
     "id": "_51C9mUlXHO2"
    },
    "source": [
-    "# Reading the dataset\n",
+    "# Reading the datasets\n",
+    "We read the plane and car datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "_51C9mUlXHO2"
+   },
+   "source": [
+    "## Reading the plane dataset\n",
+    "We read the 210 files that contain the instances of the plane classification problem.\n",
     "\n",
-    "We read the 9 files that contain the 846 instances of the classification problem.\n",
-    "\n",
-    "We concatenate all the instances in a unique dataframe called \"all_tables\" "
+    "We concatenate all the instances in a unique dataframe called \"plane_mats\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "zo31q5cwXHO3",
     "outputId": "a8dc5a71-aacc-4a23-a48f-a49ad491e7be"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reading dataset from file  vehicle_dataset/xaa.dat\n",
-      "Reading dataset from file  vehicle_dataset/xab.dat\n",
-      "Reading dataset from file  vehicle_dataset/xac.dat\n",
-      "Reading dataset from file  vehicle_dataset/xad.dat\n",
-      "Reading dataset from file  vehicle_dataset/xae.dat\n",
-      "Reading dataset from file  vehicle_dataset/xaf.dat\n",
-      "Reading dataset from file  vehicle_dataset/xag.dat\n",
-      "Reading dataset from file  vehicle_dataset/xah.dat\n",
-      "Reading dataset from file  vehicle_dataset/xai.dat\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# We define the names of the 18 attributes plus the class name (type of vehicle)\n",
-    "# This is not really needed but we do it for clarity of presentation\n",
-    "# We have taken the attributes names from the web page of the dataset (http://archive.ics.uci.edu/ml/datasets/Statlog+%28Vehicle+Silhouettes%29)\n",
-    "\n",
-    "names_attributes = ['COMPACTNESS','CIRCULARITY','DISTANCE-CIRCULARITY','RADIUS-RATIO','PR.AXIS-ASPECT-RATIO','MAX.LENGTH-ASPECT-RATIO','SCATTER-RATIO','ELONGATEDNESS','PR.AXIS-RECTANGULARITY','MAX.LENGTH-RECTANGULARITY','SVARIANCE-MAJOR-AXIS','SVARIANCE-MINOR-AXIS',' SRADIUS-GYRATION',' SKEWNESS-MAJOR-AXIS',' SKEWNESS-MINOR-AXIS','KURTOSIS-MAJOR-AXIS','KURTOSIS-MINOR-AXIS','HOLLOWS-RATIO','VEHICLE']\n",
-    "\n",
-    "# Now the files are read. There are 9 files with names 'xaa.dat', 'xab.dat' and so on\n",
-    "# Therefore we create first the name of the files adding characters between 'a' and 'i' and then read \n",
-    "# the corresponding file\n",
-    "\n",
-    "# The 9 letters between 'a' and  'i'\n",
-    "list_letters = list(map(chr, range(ord('a'), ord('i')+1)))\n",
-    "\n",
-    "\n",
-    "# For each letter, we create a file name, read the file, and concatenate in the frame 'all_tables'\n",
-    "for letter in list_letters:\n",
-    "   dataset_name = 'vehicle_dataset/xa'+letter+'.dat'\n",
-    "   print(\"Reading dataset from file \",dataset_name)\n",
-    "   table = pd.read_table(dataset_name,sep=' ',names=names_attributes,index_col=False)\n",
-    "   if letter=='a':\n",
-    "     all_tables = table\n",
-    "   else:    \n",
-    "     all_tables = pd.concat([all_tables,table])\n"
+    "plane_dir = \"../shape_dataset/plane_data/\"\n",
+    "plane_mats = []\n",
+    "for file in os.listdir(plane_dir) :\n",
+    "    plane_mats.append(loadmat(plane_dir + file))"
    ]
   },
   {
@@ -111,12 +89,12 @@
     "id": "WykGUAkPXHPE"
    },
    "source": [
-    "We check the dataset is correct, looking at the header and number of samples"
+    "We check the dataset is correct, looking at the number of samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "id": "b3Wt7DtuXHPG",
     "outputId": "d1b01efa-953d-4eac-8123-0c121df1f490"
@@ -126,14 +104,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number of samples in the dataset is  846\n"
+      "The number of samples in the plane dataset is 210\n"
      ]
     }
    ],
    "source": [
-    "print('The number of samples in the dataset is ', len(all_tables))\n",
-    "#print(\"* all_tables.head()\", all_tables.head(), sep=\"\\n\", end=\"\\n\\n\")\n",
-    "#print(\"* all_tables.tail()\", all_tables.tail(), sep=\"\\n\", end=\"\\n\\n\")"
+    "print('The number of samples in the plane dataset is', len(plane_mats))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "_51C9mUlXHO2"
+   },
+   "source": [
+    "## Reading the car dataset\n",
+    "We read the 120 files that contain the instances of the car classification problem.\n",
+    "\n",
+    "We concatenate all the instances in a unique dataframe called \"car_mats\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "id": "zo31q5cwXHO3",
+    "outputId": "a8dc5a71-aacc-4a23-a48f-a49ad491e7be",
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "car_dir = \"../shape_dataset/car_data/\"\n",
+    "car_mats = []\n",
+    "for file in os.listdir(car_dir) :\n",
+    "    car_mats.append(loadmat(car_dir + file))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "WykGUAkPXHPE"
+   },
+   "source": [
+    "We check the dataset is correct, looking at the number of samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "id": "b3Wt7DtuXHPG",
+    "outputId": "d1b01efa-953d-4eac-8123-0c121df1f490"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of samples in the car dataset is 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The number of samples in the car dataset is', len(car_mats))"
    ]
   },
   {
