--- a/written_report/bibtex_references_project.bib
+++ b/written_report/bibtex_references_project.bib
@@ -1,41 +1,39 @@
-@Article{Blake_and_Merz:1998,
-  title={ {UCI} Repository of machine learning databases [http://www. ics. uci. edu/\~{} mlearn/MLRepository. html]. Irvine, CA: University of California},
-  author={Blake, Catherine L and Merz, Christopher J},
-  journal={Department of Information and Computer Science},
-  volume={55},
-  year={1998},
+@Article{Thakoor:2007,
+  author={N. {Thakoor} and J. {Gao} and S. {Jung}},
+  journal={IEEE Transactions on Image Processing}, 
+  title={Hidden Markov Model-Based Weighted Likelihood Discriminant for 2-D Shape Classification}, 
+  year={2007},
+  volume={16},
+  number={11},
+  pages={2707-2719},
 }
 
-
-@Article{Laurentini:1997,
-  title={How many {2D} silhouettes does it take to reconstruct a {3D} object?},
-  author={Laurentini, Aldo},
-  journal={Computer Vision and Image Understanding},
-  volume={67},
-  number={1},
-  pages={81--87},
-  year={1997},
-  publisher={Elsevier}
+@Inproceedings{Thakoor:2005-July,
+  author={N. {Thakoor} and  {Sungyong Jung} and J. {Gao}},
+  booktitle={2005 IEEE International Conference on Multimedia and Expo}, 
+  title={Hidden Markov Model Based Weighted Likelihood Discriminant for Minimum Error Shape Classification}, 
+  year={2005},
+  volume={},
+  number={},
+  pages={342-345},
 }
 
-
-@Article{Mokhtarian:1995,
-  title={Silhouette-based isolated object recognition through curvature scale space},
-  author={Mokhtarian, Farzin},
-  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
-  volume={17},
-  number={5},
-  pages={539--544},
-  year={1995},
-  publisher={IEEE}
+@Inproceedings{Thakoor:2005-Oct,
+  author={N. {Thakoor} and J. {Gao}},
+  booktitle={Tenth IEEE International Conference on Computer Vision (ICCV'05) Volume 1}, 
+  title={Shape classifier based on generalized probabilistic descent method with hidden Markov descriptor}, 
+  year={2005},
+  volume={1},
+  number={},
+  pages={495-502 Vol. 1},
 }
-
-@TechReport{Siebert:1987,
-  author =       "J. P. Siebert",
-  title =        "Vehicle recognition using rule based methods",
-  institution = "Turing Institute",
-  month = "March",
-  type = "Research Memorandum",
-  number = "TIRM-87-018",
-  year = "1987",
- }
+ 
+@Inproceedings{Thakoor:2005-Sept,
+  author={N. {Thakoor} and J. {Gao}},
+  booktitle={IEEE International Conference on Image Processing 2005}, 
+  title={Automatic video object shape extraction and its classification with camera in motion}, 
+  year={2005},
+  volume={3},
+  number={},
+  pages={III-437},
+}
