Gaussian filter applied

--- a/notebook/P59_Shape_Classification_ML_D2.ipynb
+++ b/notebook/P59_Shape_Classification_ML_D2.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 99,
    "metadata": {
     "id": "Yyc03UBFXHOp"
    },
@@ -48,7 +48,10 @@
     "import re\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "\n",
+    "from scipy.ndimage import gaussian_filter\n",
+    "from sklearn.decomposition import PCA"
    ]
   },
   {
@@ -75,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 74,
    "metadata": {
     "id": "zo31q5cwXHO3",
     "outputId": "a8dc5a71-aacc-4a23-a48f-a49ad491e7be"
@@ -97,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 75,
    "metadata": {
     "id": "zo31q5cwXHO3",
     "outputId": "a8dc5a71-aacc-4a23-a48f-a49ad491e7be"
@@ -208,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 76,
    "metadata": {
     "id": "b3Wt7DtuXHPG",
     "outputId": "d1b01efa-953d-4eac-8123-0c121df1f490"
@@ -240,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 77,
    "metadata": {
     "id": "zo31q5cwXHO3",
     "outputId": "a8dc5a71-aacc-4a23-a48f-a49ad491e7be",
@@ -263,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 78,
    "metadata": {
     "id": "zo31q5cwXHO3",
     "outputId": "a8dc5a71-aacc-4a23-a48f-a49ad491e7be"
@@ -329,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 80,
    "metadata": {
     "id": "b3Wt7DtuXHPG",
     "outputId": "d1b01efa-953d-4eac-8123-0c121df1f490"
@@ -400,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 81,
    "metadata": {
     "id": "atXEc2AGXHPM",
     "outputId": "6ccb6362-b469-47a1-b9dd-16012ac37516"
@@ -422,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +568,7 @@
        "[120 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +683,7 @@
        "[120 rows x 1 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +749,7 @@
        "       18])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +784,7 @@
        "       3, 2, 4, 4, 3, 1, 4, 3, 1, 4])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +930,7 @@
        "[120 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,6 +945,197 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aplying a filter to our shapes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filtered with Gaussian filter (standar deviation = 10).\n",
+    "# Gaussian filter: https://docs.scipy.org/doc/scipy/reference/generated/scipy.ndimage.gaussian_filter.html\n",
+    "for i in range(len(car_df['x'])):\n",
+    "    car_df.at[i, 'x'] = gaussian_filter(np.array(car_df['x'][i]), sigma=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This how our shapes filtered look like: \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>Class</th>\n",
+       "      <th>Sample</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[[185, 185], [185, 185], [185, 185], [185, 185...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[[186, 186], [186, 186], [186, 186], [186, 186...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[[125, 125], [125, 125], [125, 125], [125, 125...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[[127, 127], [127, 127], [127, 127], [127, 127...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[[144, 144], [144, 144], [145, 145], [145, 145...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>[[108, 108], [108, 108], [108, 108], [108, 108...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>[[159, 159], [159, 159], [159, 159], [159, 159...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>[[99, 99], [99, 99], [99, 99], [99, 99], [99, ...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>[[117, 117], [117, 117], [117, 117], [117, 117...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>[[147, 147], [147, 147], [147, 147], [147, 147...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>120 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     x  Class  Sample\n",
+       "0    [[185, 185], [185, 185], [185, 185], [185, 185...      3      10\n",
+       "1    [[186, 186], [186, 186], [186, 186], [186, 186...      4       1\n",
+       "2    [[125, 125], [125, 125], [125, 125], [125, 125...      2      17\n",
+       "3    [[127, 127], [127, 127], [127, 127], [127, 127...      2      18\n",
+       "4    [[144, 144], [144, 144], [145, 145], [145, 145...      1       1\n",
+       "..                                                 ...    ...     ...\n",
+       "115  [[108, 108], [108, 108], [108, 108], [108, 108...      1       6\n",
+       "116  [[159, 159], [159, 159], [159, 159], [159, 159...      4      11\n",
+       "117  [[99, 99], [99, 99], [99, 99], [99, 99], [99, ...      3      23\n",
+       "118  [[117, 117], [117, 117], [117, 117], [117, 117...      1      12\n",
+       "119  [[147, 147], [147, 147], [147, 147], [147, 147...      4      18\n",
+       "\n",
+       "[120 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"This how our shapes filtered look like: \\n\")\n",
+    "car_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalize the shapes to a fixed length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(325, 2)"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "tZfvD3kjXHPV"
    },
@@ -953,11 +1147,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {
     "id": "b3WhjQgpXHPV"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'names_attributes' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-92-df5c6de86f44>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# The names of the features are the first 18 attributes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfeatures_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnames_attributes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m18\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# all_features contains the features for the 846 samples.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mall_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmy_dataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfeatures_names\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'names_attributes' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# The names of the features are the first 18 attributes\n",
     "features_names = names_attributes[1:18]\n",
